  put in the queue with ``putBack`` will be pulled out before any others.

- convert to using zope.minmax rather than locally defined ``Atom``.

- Fix (and simplify) last_ping code so as to reduce unnecessarily writing the
  state of the parent DispatcherAgents collection to the database whenever the
  atom changed.

- Depends on new release of zc.twist (1.3)

1.1.1 (2008-05-14)
==================

- more README tweaks.

- converted all reports from the dispatcher, including the monitor output,
  to use "unpacked" integer oids.  This addresses a problem that simplejson
  was having in trying to interpret the packed string blobs as unicode, and
  then making zc.ngi fall over.  To get the object, then, you'll need to
  use ``ZODB.utils.p64``, like this:
  ``connection.get(ZODB.utils.p64(INTEGER_OID))``, where ``INTEGER_OID``
  indicates the integer oid of the object you want to examine.

- added several more tests for the monitor code.

- made the ``async jobs`` monitor command be "up to the minute".  Before, it
  included all of the new and active jobs from the previous poll; now, it
  also filters out those that have since completed.

- The ``async job`` command was broken, as revealed by a new monitor test.
  Fixed, which also means we need a new version of zope.bforest (1.2) for a new
  feature there.

1.1 (2008-04-24)
================

- Fired events when the IQueues and IQueue objects are installed by the
  QueueInstaller (thanks to Fred Drake).

- Dispatchers make agent threads keep their connections, so each connection's
  object cache use is optimized if the agent regularly requests jobs with
  the same objects.

- README improved (thanks to Benji York and Sebastian Ware).

- Callbacks are logged at start in the trace log.

- All job results (including callbacks) are logged, including verbose
  tracebacks if the callback generated a failure.

- Had the ThreadedDispatcherInstaller subscriber stash the thread on the